# emacs50

./: README.md  install.sh  uninstall.sh
examples/esp32/: HOWTO.md  README.md
examples/esp32/c-idf-blink/: CMakeLists.txt  README.md
examples/esp32/c-idf-blink/main/: blink.c
examples/esp32/rust-blink/: Cargo.toml  README.md  rust-toolchain.toml
examples/esp32/rust-blink/.cargo/: config.toml
examples/esp32/rust-blink/src/: main.rs
examples/esp32/rust-sos-s3/: Cargo.toml  README.md  rust-toolchain.toml
examples/esp32/rust-sos-s3/.cargo/: config.toml
examples/esp32/tinygo-blink/: README.md  go.mod  main.go
templates/esp32/: README.md
templates/esp32/c-idf-hello/: CMakeLists.txt  README.md
templates/esp32/c-idf-hello/main/: main.c
templates/esp32/cpp-idf-hello/: CMakeLists.txt  README.md
templates/esp32/cpp-idf-hello/main/: main.cpp
templates/esp32/micropython-hello/: .emacs50-flash  README.md  main.py
templates/esp32/rust-hello/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
templates/esp32/rust-hello/.cargo/: config.toml
templates/esp32/rust-hello/src/: main.rs
templates/esp32/tinygo-hello/: .emacs50-flash  README.md  go.mod  main.go
