[package]
name         = "rust-hello"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"

# Tren esp-hal 1.0 — ver el comentario grande en examples/esp32/rust-sos-s3/Cargo.toml.
# Para el ESP32 clásico: "esp32s3" → "esp32" en todas las deps y en .cargo/config.toml.
[dependencies]
esp-hal                = { version = "~1.0.0", features = ["esp32s3", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-backtrace          = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println            = { version = "0.17.0", default-features = false, features = ["esp32s3", "log-04", "jtag-serial"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug         = 2
lto           = "fat"
opt-level     = "s"
